--- a/hero.html
+++ b/hero.html
@@ -22,7 +22,7 @@
 
   <section id="home" class="resume-section">
     <div class="image-container">
-      <img src="images/myface-removebg-preview.png" alt="Your Image">
+      <img src="myface-removebg-preview.png" alt="Your Image">
     </div>
     <div class="text-content">
       <h1>Herodotus Corpuz Bautista</h1>
@@ -44,7 +44,7 @@
       <h4>Ethnicity: Ilocano </h4>
       <h4>Current Address: Purok 18 Irisan Baguio City</h4>
     </div>
-    <img src="images/duck.gif" alt="Your Image">
+    <img src="duck.gif" alt="Your Image">
   </section>
 
   <section id="experience" class="resume-section">
@@ -59,7 +59,7 @@
       <li>Cleaning works</li>
     </ul>
   </div>
-    <img src="images/totoro.gif" alt="Your Image">
+    <img src="totoro.gif" alt="Your Image">
   </section>
 
   <section id="education" class="resume-section">
@@ -84,7 +84,7 @@
         <li>Purok 7 New Lucban Interior Baguio City Philippines</li>
       </ul>
     </div>
-    <img src="images/neoncat.gif" alt="Your Image">
+    <img src="neoncat.gif" alt="Your Image">
   </section>
 
 
@@ -113,7 +113,7 @@
       </ul>
       
   </div>
-     <img src="images/BMO.gif" alt="Your Image">
+     <img src="BMO.gif" alt="Your Image">
   </section>
 
   <button style="border-radius: 20px;color: black;padding: 2.5 px solid;" id="themeToggle">Toggle Theme</button>
